# wechat_sdk_python

./: .gitignore  README.md  pyproject.toml
docs/: openclaw-weixin-protocol.md
src/weixin_sdk/: __init__.py  cli.py  client.py  constants.py  crypto.py  exceptions.py  login.py  media.py  messages.py  models.py  store.py
tests/: test_crypto.py  test_media.py  test_messages.py  test_store.py
