[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-weixin-python"
version = "0.1.0"
description = "Python SDK and CLI for the OpenClaw Weixin iLink protocol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pycryptodome>=3.20.0",
]

[project.scripts]
weixin-sdk = "weixin_sdk.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
